I added the pictures of the games but I havent done the design or written the code yet if u dont like the pictures change them

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".SignInActivity" />
         <activity android:name=".RegisterActivity" />
 
-
+        <activity android:name=".GamesActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
