--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:theme="@style/Theme.GamblingApp"
         tools:targetApi="31">
 
+
+
         <activity android:name=".SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
@@ -25,7 +27,9 @@
         <activity android:name=".SignInActivity" />
         <activity android:name=".RegisterActivity" />
 
-        <activity android:name=".GamesActivity" />
+        <activity android:name=".GameMenuActivity" />
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
