Added roulette game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".RegisterActivity" />
 
         <activity android:name=".GameMenuActivity" />
+        <activity android:name=".RouletteActivity" />
 
 
         <activity
