--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,37 @@
-# --- macOS Specific Files ---
-.DS_Store
-.AppleDouble
-.LSOverride
-*.Spotlight-V100
-.Trashes
-*.swp
-*~
+#built application files
+*.apk
+*.ap_
+*.aab
 
-# --- Windows Specific Files ---
-Thumbs.db
-desktop.ini
-$RECYCLE.BIN/
-
-# --- Android Studio Specific ---
-# Android Studio project and workspace files
-.idea/
-*.iml
-
-# Gradle-specific files
-.gradle/
-build/
-!gradle-wrapper.jar
-.gradle-cache/
-
-# Local configuration
-local.properties
-*.keystore
-*.jks
-
-# Compiled code
-*.class
+# files for the dex VM
 *.dex
 
-# Log and crash files
-*.log
-*.crash
+# Java class files
+*.class
 
-# Generated files
-/build/
-generated/
+# generated files
+bin/
+gen/
 
-# Proguard mappings
-mapping.txt
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Android Studio
+*.iml
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
+.navigation
+captures/
 output.json
 
-# --- General Editor Files ---
-*~
-*.swp
-*.swo
-
-# --- Miscellaneous ---
-*.tmp
-*.temp
-*.bak
-*.obj
-*.o
-*.out
+#NDK
+obj/
+.externalNativeBuild
