--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".GameMenuActivity" />
         <activity android:name=".RouletteActivity" />
 
-
+        <activity android:name=".SlotActivity"/>
+        <activity android:name=".BlackjackActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
