--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Dec 10 16:59:07 CET 2024
-sdk.dir=/Users/artuntonguc/Library/Android/sdk
+sdk.dir=C\:\\Users\\scwi\\AppData\\Local\\Android\\Sdk
