--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 10 16:59:07 CET 2024
-sdk.dir=C\:\\Users\\scwi\\AppData\\Local\\Android\\Sdk
+#Thu Jan 23 18:44:22 CET 2025
+sdk.dir=/Users/artuntonguc/Library/Android/sdk
